--- a/style.css
+++ b/style.css
@@ -3,29 +3,27 @@ body {
 }
 
 #cabecalho {
-    background: #900;
-    color: rgb(221, 204, 204);
-    padding: 1px;
-    margin-top: 0px;
-    text-align: center;
+    position: fixed;
+    margin-left: 45%;
+    top: 0px;
+    padding: 25px;
+    border: 3px solid #73AD21;
+}
+
+#titulo {
+    text-align: justify;
 }
 
 #licoes_aprendidas {
-    
-    width: 250px;
-       
+    text-align: justify;
 }
 
 #minha_foto {
-    
-    
     width: 250px;
 }
 
 #licoes_a_aprender {
-    
-    width: 250px;
-    
+    text-align: justify;
 }
 
 #aprendizado {
@@ -39,8 +37,3 @@ body {
 #rodape {
     margin-bottom: 0px;
 }
-
-
-
-
-
