--- a/style.css
+++ b/style.css
@@ -1,115 +1,112 @@
-body{
-    background-color: rgb(253, 251, 251);
-    font-family: 'Merriweather', Georgia, serif;
-    width:960px;
-    margin: 0 auto;
+body {
+  background-color: rgb(253 , 251 , 251);
+  font-family: Merriweather, Georgia, serif;
+  width: 960px;
+  margin: 0 auto;
 }
-#cabecalho{
-    top:0;
-    position: fixed;
-    text-align: center;
-    display: block;
-    background-color:  rgb(102, 51, 0);
-    z-index: 1;
+#cabecalho {
+  top: 0;
+  position: fixed;
+  text-align: center;
+  display: block;
+  background-color: rgb(102 , 51 , 0);
+  z-index: 1;
 }
-h1{
-    text-align: center;
-    font-size: 60px;
-    color: LightGoldenRodYellow;
-    border-radius: 15px;
-    display: inline;
-    text-shadow: 2px 2px 7px ;
+h1 {
+  text-align: center;
+  font-size: 60px;
+  color: lightgoldenrodyellow;
+  border-radius: 15px;
+  display: inline;
+  text-shadow: 2px 2px 7px ;
 }
-nav{
-    text-align: center;
-    font-size: large;
-    text-shadow: 2px 2px 7px;
+nav {
+  text-align: center;
+  font-size: large;
+  text-shadow: 2px 2px 7px;
 }
-.menusuperior{
-    margin: 50px;
-}
-
-a:link{
-    text-decoration: none;
-}
-a:hover{
-    border-bottom: 5px dotted white;
+.menusuperior {
+  margin: 50px;
+  display: inline;
+  padding: 5px;
 }
 
-.menusuperior{
-    display:inline;
-    padding:5px;
+li a {
+  color: lightgoldenrodyellow;
+  font-size: x-large;
 }
 
-h2{
-    background: -webkit-linear-gradient(#eee, #333);
+a:link {
+  text-decoration: none;
+}
+a:hover {
+  border-bottom: 5px dotted white;
+}
+
+h2 {
+  background: -webkit-linear-gradient(#eee , #333);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-p{
-    font-family: sans-serif;
+p {
+  font-family: sans-serif;
 }
-#textos{
-    position: absolute;
-}
-
-#lado-esquerdo{
-    margin-right: 30px;
-    margin-left: 30px;
-    border: 10px double rgb(100, 86, 86);
-    padding-left: 20px;
-    padding-right:20px;
-    text-align: justify;
-    float: left;
-    width: 500px;
-    top:200px;
-    width:400px;
-    position: relative;
-
-}
-#lado-direito{
-    width: 300px;
-    border: 10px double rgb(100, 86, 86);
-    padding: 20px;
-    text-align: justify;
-    top:240px;
-    float: right;
-    position: relative;
-    margin-right: 90px;
+#textos {
+  position: absolute;
 }
 
-#conteudo{
-    position: absolute;
-    top:600px;
-    margin-left:10px;
+#lado-esquerdo {
+  margin-right: 30px;
+  margin-left: 30px;
+  border: 10px double rgb(100 , 86 , 86);
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: justify;
+  float: left;
+  width: 500px;
+  top: 200px;
+  width: 400px;
+  position: relative;
+
+}
+#lado-direito {
+  width: 300px;
+  border: 10px double rgb(100 , 86 , 86);
+  padding: 20px;
+  text-align: justify;
+  top: 240px;
+  float: right;
+  position: relative;
+  margin-right: 90px;
 }
 
-#rodape{
-    position: absolute;
-    top:1500px;
-    background: rgb(102, 51, 0);
-    color: LightGoldenRodYellow;
-    font-size: large;
+#conteudo {
+  position: absolute;
+  top:600px;
+  margin-left: 10px;
 }
 
-li a{
-    color: LightGoldenRodYellow;
-    font-size: x-large;
+#rodape {
+  position: absolute;
+  top: 1500px;
+  background: rgb(102 , 51 , 0);
+  color: Lightgoldenrodyellow;
+  font-size: large;
 }
 
-table, th, td{
-    border: 4px solid brown;
+table , th , td {
+  border: 4px solid brown;
 }
 
-#tabela{
-    margin-left: 10px;
-    position: absolute;
-    top:1200px;   
+#tabela {
+  margin-left: 10px;
+  position: absolute;
+  top: 1200px;   
 }
-#minha_foto{
-    position: absolute;
-    height:400px;
-    top:700px;
-    right:550px;
+#minha_foto { 
+  position: absolute;
+  height: 400px;
+  top: 700px;
+  right: 550px;
 }
