--- a/style.css
+++ b/style.css
@@ -1,18 +1,87 @@
 body {
   background-color: rgb(253 , 251 , 251);
+  font-family: Montserrat , sans-serif;
 }
 
 #cabecalho {
   position: fixed;
   top: 0;
-  background-color: rgb(3 , 64 , 120);
-  font-family: Copse , sans-serif;
+  left: 0;
+  background-color: rgb(0 , 31 , 84);
+  width: 100%;
+  height: 50px;
+  
+  
 }
 
 #minha_foto {
   width: 300px;
-  margin-top: 100px;
+  height: 300px;
+  margin-top: 40px;
+  margin-left: 30px;
+  border-radius: 10px;
+  display: inline-block;
+  
 
+
+}
+
+#secao-foto {
+    width: 40%;
+    display: inline-block;
+}
+
+p, li {
+  font-size: 16px;
+  color: #475550;
+  font-weight: 400;
+}
+
+#titulo {
+  color: #475550;
+}
+
+* {
+    margin: 0;
+}
+
+nav {   
+  height: 50px;
+  width: 100%;
+  position: static;
+  background-color: aqua;  
+  margin-top: 50px;
+    
+}
+
+.item-menu {
+  display: inline;
+  padding: 50px 20px;
+  margin: auto;
+  
+  
+}
+
+.licoes {
+  display: inline-block;
+  padding: 30px 60px;
+}
+
+article {
+  width: 40%;
+  
+  display: inline-block;
+
+}
+
+#secao-article {
+  
+}
+
+#github {
+    display: block;
+    margin-left: 30px;
+    margin-top: 10px;
 }
 
 
