--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ p {
   border: 10px double rgb(100 , 86 , 86);
   padding: 20px;
   text-align: justify;
-  top: 210px;
+  top: 200px;
   float: right;
   position: relative;
   margin-right: 90px;
@@ -105,7 +105,7 @@ p {
 }
 
 table , th , td {
-  border: 4px solid brown;
+  border: 4px solid rgb(100 , 86 , 86);
 }
 
 #tabela {
