--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300;400;500&display=swap');
+
 * {
   margin: 0;
   border: 0;
@@ -6,6 +8,7 @@
 
 body {
   background-color: rgb(253 , 251 , 251);
+  font-family: 'Sansita Swashed', cursive;
 }
 
 .titulos {
@@ -72,4 +75,8 @@ body {
   border: 1px solid black;
   display: inline-block;
   text-align: left;
+}
+.define-fonte{
+  font-size: 16px;
+  font-weight: 26px;
 }
