--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ main {
     padding: 1%;
     padding-right: 0;
     margin: 1px;
-    border: dotted;
     border-radius: 30px;
     display: inline-block;
 }
@@ -94,7 +93,8 @@ li {
     color: violet;
     background-color: green;
     position: absolute;
-    top: 75%;
+    top: 69%;
+    left: 1%;
 }
 
 .lado-direito{
