--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 #titulo {
- top: 0px;
+ top: 0;
+ color: pink;
+ font-size: 40px;
 }
-body {
- background-color: rgb(253 , 251 , 251);
+body{
+ background-color: rgb(253, 251, 251);
+ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ padding: 1em;
+ margin: 1em;
+ border-style: groove;
+ border-color: blueviolet;
+ line-height: 1.5;
 }
