--- a/style.css
+++ b/style.css
@@ -2,17 +2,23 @@
  top: 0;
  color: pink;
  font-size: 40px;
+ position: fixed;
 }
 body{
  background-color: rgb(253, 251, 251);
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
- padding: 1em;
- margin: 1em;
+ padding: 2em;
+ margin: 3em;
  border-style: groove;
+ border-top: 10em;
  border-color: blueviolet;
  line-height: 1.5;
 }
 
 .lado-esquerdo {
     float: right;
+}
+
+#minhafoto {
+    margin-top: 60px;
 }
