--- a/style.css
+++ b/style.css
@@ -1,24 +1,20 @@
 #titulo {
- top: 0;
- color: pink;
- font-size: 40px;
- position: fixed;
+    top: 0;
+    color: pink;
+    font-size: 40px;
+    position: fixed;
 }
-body{
- background-color: rgb(253, 251, 251);
- font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
- padding: 2em;
- margin: 3em;
- border-style: groove;
- border-top: 10em;
- border-color: blueviolet;
- line-height: 1.5;
+body {
+    background-color: rgb(253, 251, 251);
+    font-family: -apple-system, BlinkMacSystemFont, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
+    padding: 2em;
+    margin: 3em;
+    border-style: groove;
+    border-top: 10em;
+    border-color: blueviolet;
+    line-height: 1.5;
 }
 
 .lado-esquerdo {
     float: right;
-}
-
-#minhafoto {
-    margin-top: 60px;
 }
