--- a/style.css
+++ b/style.css
@@ -1,3 +1,56 @@
+#all{
+    border: 1px solid gray ;
+    marging:0px;
+    padding: 0px 100px; 
+    }
 body {
-    background-color: black;
+    background-color: rgb(253, 251, 251);
    }
+#cabecalho {
+    background-color: rgba(100, 200, 183, 0.993);
+    position: relative;
+    top: 0px;
+    margin-bottom:20px;
+   }
+#titulo{
+    padding: 10px 350px;
+}
+#minha_foto {
+   width: 350px;
+   display: block;s
+   ;
+}
+.list {
+    display: inline-block;
+    margin-top: 20px;
+}
+#unordened{
+    margin-left:100px ;
+}
+#main_part{
+    display: inline-block;
+    height: 150px;
+}
+#rodape{
+    font-family: monospace;
+    font-weight: bold;
+    margin-top: 150px;
+}
+#cytus{
+    float: right;
+}
+.link{
+    display: inline-block;
+}
+aside {
+    width: 40%;
+    float: right;
+    border-left: 1px solid gray;
+    margin-top: -10px;
+}
+aside  p {
+    margin: 5px;
+}
+#main_part article p {
+    width: 58%;
+}
