--- a/style.css
+++ b/style.css
@@ -29,9 +29,16 @@ body {
   width: 250px;
 }
 
-ol , ul {
+ol , ul , table {
   display: inline-block;
+  margin: 50px 125px;
 }
+
+th , tr , td {
+  border: 1px solid black;
+  padding: 0 5px;
+}
+
 
 .lado-esquerdo , .lado-direito {
   border: 2px solid black;
