mudanca da semantica5

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
                 #logoTrybe {
                   position: fixed;
                   left: 40%;
+                  top: 2%;
                 }
                 
                 #nav {
