--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a {
   color: rgb(46 , 209 , 182);
   text-decoration: none;
   margin: 10px;
-  transition: .25s
+  transition: 0.25s;
 }
 
 a:hover {
@@ -40,7 +40,7 @@ a:active {
 #portfolio {
   display: block;
   text-align: center;
-  color: rgb(0 , 0 , 139);
+  color: darkblue;
   margin: 0;
 }
 
