--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 
 a {
   color: rgb(46 , 209 , 182);
-  font-weight: bold;
+  font-weight: 600;
   text-decoration: none;
   margin: 10px;
   transition: 0.25s;
