--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ main {
 
 .trybe {
   color: teal;
-  font-weight: 600px;
+  font-weight: 600;
   text-decoration: none;
 }
 
@@ -89,17 +89,18 @@ main {
   margin: 10px 0 10px 10px;
 }
 
-.sessao h2 {
-  font-family: Acme, sans-serif;
-  letter-spacing: 1.5px;
-  color: rgb(84 , 11 , 14)
-}
-
 .artigo {
   background-color: rgb(255 , 243 , 176);
   width: fit-content;
-  margin: 5px 1px 1px;
+  border:5px solid rgb(224 , 159 , 62);
+  margin: 5px 10px 1px;
   padding: 5px;
+}
+
+.artigo h2 {
+  font-family: Acme, sans-serif;
+  letter-spacing: 1.5px;
+  color: rgb(84 , 11 , 14);
 }
 
 #minha_foto {
@@ -173,6 +174,7 @@ main {
 #texto-principal p {
   text-indent: 30px;
 }
+
 #texto-principal h3 {
   padding: 5px;
 }
@@ -188,10 +190,7 @@ main {
   max-width: 460px;
   font-family: Noto Sans, sans-serif;
 }
-#trexinho {
-  text-align: right;
-  font-size: small;
-}
+
 #canto h2 {
   font-family: Acme, sans-serif;
   letter-spacing: 1.5px;
@@ -222,7 +221,7 @@ main {
   color: rgb(255 , 243 , 176);
   text-align: center;
   font-family: Acme, sans-serif;
-  font-weight: 600px;
+  font-weight: 600;
   font-size: 25px;
   letter-spacing: 1.5px;
   padding: 5px;
@@ -242,7 +241,7 @@ main {
 .tdline {
   border: 1px solid rgb(224 , 159 , 62);
   text-align: center;
-  font-weight: 600px;
+  font-weight: 600;
   font-size: 30px;
 }
 
@@ -250,7 +249,7 @@ main {
   background-color: rgb(255 , 243 , 176);
   padding: 10px;
   border: 1px solid rgb(224 , 159 , 62);
-  font-weight: 600px;
+  font-weight: 600;
   font-size: medium;
 }
 
@@ -267,5 +266,5 @@ main {
 .contactpic {
   width: 60px;
   border-radius: 50%;
-  margin: 10px 0px;
+  margin: 10px 0;
 }
